# llama-stack-provider-lmeval

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  COMPATIBILITY.md  CONTRIBUTING.md  Dockerfile.local  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run-inline.yaml  run.yaml
.agentready/: assessment-20260212-110108.json  assessment-latest.json  report-20260212-110108.html  report-20260212-110108.md  report-latest.html  report-latest.md
.github/workflows/: build-and-push.yaml  pr-container-build.yaml  pre-commit.yml  security.yml  test-kind.yml  testing.yml
demo/: 00-getting_started_with_lmeval.ipynb
demo/manifests/: dsc.yaml  phi3-isvc.yaml  phi3-model-container.yaml  phi3-serving-runtime.yaml  service-account.yaml
demo/scripts/: deploy_model.sh  setup.sh
demos/: 00-getting_started_with_lmeval.ipynb  01-custom_dataset_eval.ipynb
demos/resources/: kustomization.yaml  phi3-isvc.yaml  phi3-model-container.yaml  pod.yaml  pvc.yaml
demos/resources/data/: example-dk-bench-input-bmo.jsonl
demos/scripts/: deploy_model.sh  setup.sh
providers.d/inline/eval/: trustyai_lmeval.yaml
providers.d/remote/eval/: trustyai_lmeval.yaml
scripts/: build-and-test.sh  run-server.sh
src/llama_stack_provider_lmeval/: __init__.py  compat.py  config.py  errors.py  lmeval.py  provider.py
src/llama_stack_provider_lmeval/inline/: __init__.py  lmeval.py  provider.py
src/llama_stack_provider_lmeval/remote/: __init__.py  lmeval.py  provider.py
tests/: __init__.py  conftest.py  test_base_url_handling.py  test_env_vars.py  test_lmeval.py  test_lmeval_inline.py  test_namespace.py
tests/kind/: test_kind.sh
tests/kind/manifests/: llama_stack_distribution.yaml  vllm_emulator.yaml
