[project]
name = "llama-stack-provider-lmeval"
version = "0.1.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-stack>=0.2.5",
    "kubernetes",
    "fastapi",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "aiosqlite",
    "uvicorn",
    "ipykernel",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "isort"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_paths = ["src"]
addopts = "-v"
