[project]
name = "llama-stack-provider-lmeval"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-stack>=0.2.5",
    "kubernetes",
    "fastapi",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "aiosqlite",
    "uvicorn",
    "ipykernel",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "isort", "ruff"]

[dependency-groups]
dev = ["pytest", "pytest-cov", "black", "isort", "pre-commit", "ruff", "mypy", "types-PyYAML", "types-requests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_paths = ["src"]
addopts = "-v"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
